# renderer_nj

./: CMakeLists.txt  README.md
include/: camera.h  initiate.h  material.h  mesh.h  model.h  object.h  render.h  screen.h  shader.h  texture.h
include/glad/: glad.h
shaders/: SSR.fs  background.fs  background.vs  brdf.fs  debug.fs  fresnel_average.fs  irradiance.fs  kulla_conty.fs  kulla_conty_average.fs  mipmap.fs  pbr.fs  pbr.vs  prefilter.fs  shadow.fs  shadow.vs
src/: Kulla_Conty.cpp  SSR.cpp  brdf.cpp  cubemap.cpp  glad.cpp  initiate.cpp  main.cpp  material.cpp  mesh.cpp  model.cpp  object.cpp  screen.cpp  shader.cpp  shadow.cpp  texture.cpp
